Paso 2 - Agregar parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h2>Hola Mundo</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, in molestiae. Nesciunt doloremque minus earum rerum. Ipsum vero dolor deserunt, optio, quaerat esse excepturi tenetur nemo a nobis placeat at.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis ex ratione dolorem ab iusto, voluptatem, praesentium qui magni quod, pariatur voluptates necessitatibus asperiores quis expedita vel quisquam laborum sed sequi!</p>
 </body>
 </html>
